--- a/web_client/ea_web-github/addons/web/i18n/it.po
+++ b/web_client/ea_web-github/addons/web/i18n/it.po
@@ -2104,4 +2104,4 @@ msgstr "Per maggiori informazioni visita"
 #: code:addons/web/static/src/xml/base.xml:424
 #, python-format
 msgid "OpenERP.com"
-msgstr "LibrERP.si"
+msgstr "LibrERP.com"
