--- a/dt_product_serial/i18n/it.po
+++ b/dt_product_serial/i18n/it.po
@@ -387,8 +387,8 @@ msgstr "Active the automatic split of move lines on the pickings."
 
 #. module: dt_product_serial
 #: help:res.company,is_group_invoice_line:0
-msgid "If active, OpenERP will group the identical invoice lines. If inactive, each move line will generate one invoice line."
-msgstr "Se attivo, OpenERP raggruppera tutte le righe identiche per la fatturazione, altrimenti ogni movimento genererà una riga di fatturazione."
+msgid "If active, LibrERP will group the identical invoice lines. If inactive, each move line will generate one invoice line."
+msgstr "Se attivo, LibrERP raggruppera tutte le righe identiche per la fatturazione, altrimenti ogni movimento genererà una riga di fatturazione."
 
 #. module: dt_product_serial
 #: view:res.partner:0
