[IMP] show also last sale customer

--- a/product_extended/i18n/it.po
+++ b/product_extended/i18n/it.po
@@ -36,6 +36,11 @@ msgid "Last Supplier"
 msgstr "Ultimo Fornitore"
 
 #. module: product_extended
+#: field:product.product,last_customer_id:0
+msgid "Last Supplier"
+msgstr "Ultimo Cliente"
+
+#. module: product_extended
 #: view:product.product:0
 msgid "Extra information"
 msgstr "Informazioni Aggiuntive sul Prezzo"
