--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -41,7 +41,7 @@ msgstr "Validazione Cliente"
 
 #. module: sale_order_confirm
 #: field:sale.order,credit_limit:0
-msgid "Fido Residuo"
+msgid "Remaining Credit Limit"
 msgstr "Fido Residuo"
 
 #. module: sale_order_confirm
@@ -132,8 +132,13 @@ msgstr "Annulla Ordine"
 
 #. module: sale_order_confirm
 #: field:res.company,check_credit_limit:0
-msgid "Abilita gestione fido"
+msgid "Enable Credit Limit Check"
 msgstr "Abilita gestione fido"
+
+#. module: sale_order_confirm
+#: field:res.company,default_credit_limit:0
+msgid "Default Limit"
+msgstr "Fido di default"
 
 #. module: sale_order_confirm
 #: view:sale.order:0
@@ -764,3 +769,68 @@ msgstr "Accordo Quadro"
 msgid "Set if this Pricelist not need approve on order"
 msgstr "Accordo Quadro"
 
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:146
+#, python-format
+msgid "Credit Over Limit"
+msgstr "Fido Superato"
+
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:147
+#, python-format
+msgid "Is not possible to confirm because customer exceed the credit limit. \n"
+" Is Possible change the Order Policy \"Pay Before Delivery\" \n"
+" on tab \"Other Information\""
+msgstr "Non è possibile confermare in quanto il cliente non ha fido sufficiente. \n"
+" È possibile cambiare la politica di fatturazione a \"pagamento prima della consegna\" \n"
+" nella scheda \"Altre informazioni\""
+
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:153
+#, python-format
+msgid "Minimum Amount Billable"
+msgstr "Importo Minimo Fatturabile"
+
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:158
+#, python-format
+msgid "Is not possible to confirm because is not reached the minimum billable {amount} {currency}"
+msgstr "Non è possibile confermare in quanto non si è raggiunto il minimo fatturabile di {amount} {currency}"
+
+#. module: sale_order_confirm
+#: code:addons/sale_order_confirm/sale.py:156
+#, python-format
+msgid "Is not possible to confirm because is not reached the minimum billable {amount} {currency}"
+" Only {user} can do it"
+msgstr "Non è possibile confermare in quanto non si è raggiunto il minimo fatturabile di {amount} {currency} \n"
+" È possibile farlo validare da {user}"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale_order_confirm.credit_modifier
+msgid "Credit Limit Configurator"
+msgstr "Configuratore Credito"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale.verify_technical
+msgid "Verify Technical"
+msgstr "Verifica Tecnica"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale.verify_manager
+msgid "Verify Manager"
+msgstr "Verifica Manager"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale.view_margin
+msgid "View Margin"
+msgstr "Vedi i Margini"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale.view_delivered_qty
+msgid "View Delivered Qty"
+msgstr "Vedi Quantità consegnate"
+
+#. module: sale_order_confirm
+#: model:res.groups,name:sale.view_qty_warehouse
+msgid "View Qty on Warehouse"
+msgstr "Vedi Quantità in magazzino"
