--- a/purchase_requisition_extended/i18n/it.po
+++ b/purchase_requisition_extended/i18n/it.po
@@ -97,5 +97,5 @@ msgstr "Non ci sono fornitori"
 #. module: purchase_requisition_extended
 #: code:addons/purchase_requisition_extended/purchase_requisition.py:63
 #, python-format
-msgid "There are no Prefered Supplier"
+msgid "There are no Preffered Supplier"
 msgstr "Non ci sono fornitori preferenziali"
