[sale_order_confirm] new term as required from Noemi

--- a/sale_order_confirm/i18n/it.po
+++ b/sale_order_confirm/i18n/it.po
@@ -490,7 +490,7 @@ msgstr "Preventivi"
 
 #. module: sale_order_confirm
 #: view:sale.order.confirm:0
-msgid "_Confirmated"
+msgid "_Confirmed"
 msgstr "_Conferma"
 
 #. module: sale_order_confirm
